[gd_scene load_steps=21 format=3 uid="uid://dglkeu878k08s"]

[ext_resource type="Texture2D" uid="uid://dxs5jt0gs3rns" path="res://audio/UI/zombie_choice_button.png" id="1_52moy"]
[ext_resource type="Script" path="res://ui.gd" id="1_da5ce"]
[ext_resource type="Texture2D" uid="uid://b6x0jvqit4ful" path="res://audio/UI/zombie_choice_button_mouse.png" id="3_rwim7"]
[ext_resource type="AudioStream" uid="uid://dlu85kmrkc657" path="res://audio/UI/level_complete.mp3" id="3_t54s5"]
[ext_resource type="Texture2D" uid="uid://pktte8jbwj34" path="res://audio/UI/zombie_choice_button_pressed.png" id="4_cowri"]
[ext_resource type="Texture2D" uid="uid://b10fkfr4fq3bv" path="res://audio/UI/skill_tree_button.png" id="5_se324"]
[ext_resource type="Texture2D" uid="uid://kpxgejul63tx" path="res://audio/UI/skill_tree_button_pressed.png" id="6_wp1dr"]
[ext_resource type="Texture2D" uid="uid://cj06lm3mt4sip" path="res://audio/UI/skill_tree_button_hover.png" id="7_opn0r"]
[ext_resource type="Texture2D" uid="uid://b2rbt30ka5qxv" path="res://audio/UI/HUD_outline.png" id="9_5ypd5"]
[ext_resource type="Theme" uid="uid://dur8rnt6mmf6j" path="res://UI_theme.tres" id="10_kj782"]
[ext_resource type="Texture2D" uid="uid://dnf7d1jmsvc0u" path="res://textures/casual_zombie_icon.png" id="11_3q0e2"]
[ext_resource type="Texture2D" uid="uid://bofbf7qeeklkt" path="res://textures/cheerleader_zombie_icon.png" id="12_y35yt"]
[ext_resource type="AudioStream" uid="uid://3wo8bw8sspmy" path="res://audio/hitHurt.wav" id="13_i625s"]
[ext_resource type="Texture2D" uid="uid://1bybxc7krbwj" path="res://textures/no_zombie_icon.png" id="14_uokjo"]

[sub_resource type="SystemFont" id="SystemFont_plpnl"]
font_names = PackedStringArray("8-bit Limit (BRK)")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_4e438"]
line_spacing = 1.0
font = SubResource("SystemFont_plpnl")
font_size = 126
font_color = Color(1, 0, 0, 1)
outline_size = 35
outline_color = Color(0, 0, 0, 1)
shadow_size = 56
shadow_color = Color(0, 0, 0, 0.156863)

[sub_resource type="LabelSettings" id="LabelSettings_pm06a"]
font_size = 36
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_uklbc"]
font_size = 81
outline_size = 30
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kxpki"]
font_size = 56
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_l1ot6"]
font_names = PackedStringArray("8-bit Limit (BRK)")
subpixel_positioning = 0

[node name="HUD" type="CanvasLayer"]
layer = 2
script = ExtResource("1_da5ce")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CanvasLayer"]
light_mask = 0
z_index = -3
offset_top = 669.0
offset_right = 3840.0
offset_bottom = 1491.0
scale = Vector2(0.500008, 0.500008)
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/AspectRatioContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("9_5ypd5")

[node name="LC_cont" type="AspectRatioContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -585.0
offset_top = -67.5
offset_right = 313.0
offset_bottom = 67.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.39866, 1.39866)
mouse_filter = 2

[node name="level_complete" type="Label" parent="LC_cont"]
visible = false
light_mask = 16
visibility_layer = 16
z_index = 10
layout_mode = 2
text = "LEVEL COMPLETE!"
label_settings = SubResource("LabelSettings_4e438")
horizontal_alignment = 1
vertical_alignment = 1

[node name="stats_cont" type="AspectRatioContainer" parent="."]
offset_left = 17.0
offset_right = 269.0
offset_bottom = 50.0
scale = Vector2(1.34636, 1.34636)

[node name="stats" type="Label" parent="stats_cont"]
z_index = 60
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Nekroplazma: "
label_settings = SubResource("LabelSettings_pm06a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="zombie_choice" type="AspectRatioContainer" parent="."]
offset_left = 174.0
offset_top = 914.0
offset_right = 519.0
offset_bottom = 1259.0
scale = Vector2(0.445304, 0.445304)

[node name="TextureButton" type="TextureButton" parent="zombie_choice"]
z_index = 2
layout_mode = 2
texture_normal = ExtResource("1_52moy")
texture_pressed = ExtResource("3_rwim7")
texture_hover = ExtResource("4_cowri")

[node name="skill_tree" type="AspectRatioContainer" parent="."]
offset_left = 14.0
offset_top = 846.0
offset_right = 359.0
offset_bottom = 1191.0
scale = Vector2(0.443124, 0.443124)

[node name="TextureButton" type="TextureButton" parent="skill_tree"]
z_index = 2
layout_mode = 2
texture_normal = ExtResource("5_se324")
texture_pressed = ExtResource("6_wp1dr")
texture_hover = ExtResource("7_opn0r")

[node name="level_complete_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_t54s5")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 67.0
offset_top = 120.0
offset_right = 1441.0
offset_bottom = 415.0
scale = Vector2(0.472448, 0.472448)
theme = ExtResource("10_kj782")

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/h_separation = 60
theme_override_constants/v_separation = 0
columns = 3

[node name="TextureRect" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("11_3q0e2")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Label4" type="Label" parent="PanelContainer/GridContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("10_kj782")
text = "CASUAL ZOMBIE
"
label_settings = SubResource("LabelSettings_uklbc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/GridContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("10_kj782")
text = "Cost: 2 Necroplasm   
"
label_settings = SubResource("LabelSettings_kxpki")
horizontal_alignment = 1

[node name="Label5" type="Label" parent="PanelContainer/GridContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("10_kj782")
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 44
theme_override_fonts/font = SubResource("SystemFont_l1ot6")
theme_override_font_sizes/font_size = 137
text = "CHOOSE"

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("12_y35yt")
expand_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Label4" type="Label" parent="PanelContainer/GridContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("10_kj782")
text = "CHEERLEADER
"
label_settings = SubResource("LabelSettings_uklbc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/GridContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("10_kj782")
text = "Cost: 4 Necroplasm   
"
label_settings = SubResource("LabelSettings_kxpki")
horizontal_alignment = 1

[node name="Label5" type="Label" parent="PanelContainer/GridContainer/VBoxContainer2"]
layout_mode = 2

[node name="Button2" type="Button" parent="PanelContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("10_kj782")
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 44
theme_override_fonts/font = SubResource("SystemFont_l1ot6")
theme_override_font_sizes/font_size = 137
text = "CHOOSE"

[node name="button_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_i625s")
pitch_scale = 1.5

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
offset_left = 1612.0
offset_top = 765.0
offset_right = 2246.0
offset_bottom = 1399.0
scale = Vector2(0.419156, 0.419156)
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("14_uokjo")

[connection signal="pressed" from="zombie_choice/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="PanelContainer/GridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/GridContainer/Button2" to="." method="_on_button_2_pressed"]
